prevents scrollbar from messing the page layout

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -4,4 +4,5 @@
 
 body {
 	margin-bottom: 1rem;
+	overflow-y: scroll;
 }
